syntax = "proto3";

// to build: mvn clean install

option java_multiple_files = true;
option java_outer_classname = "controllerAddressGetter";
option objc_class_prefix = "PRP";

package com.fcup.generated;

service addressgetter {
    rpc GetAddress (storageControllerInfo) returns (addressChangedStatus) { }
}

message storageControllerInfo {
    string ip = 1;
    int32 port = 2;
}

message addressChangedStatus {
    bool ok = 1;
}